# evolib

./: README.md  pyproject.toml
configs/: agentboard_evolib_agent_snippet.yaml  azure_openai.yaml  original_alfworld.yaml  original_webshop.yaml  smoke.yaml
docs/: merge_conflict_sampling_library.md  original_webshop_evolib_flow.md
evolib_agent_suite/: __init__.py  config_utils.py  embeddings.py  run_eval.py  schema.py  utils.py
evolib_agent_suite/agents/: __init__.py  react_evolib_agent.py
evolib_agent_suite/envs/: __init__.py  base.py  factory.py  mock.py  original_alfworld.py  original_webshop.py
evolib_agent_suite/evolib/: __init__.py  composition.py  consolidation.py  extractors.py  ig.py  library.py  prompts.py  sampling.py  storage.py
evolib_agent_suite/integrations/: __init__.py
evolib_agent_suite/integrations/agentboard/: __init__.py  evolib_agent.py
evolib_agent_suite/llm/: __init__.py  base.py  factory.py  providers.py
scripts/: install_into_agentboard.py
tests/: test_agentboard_webshop_integration.py  test_composition.py  test_config_utils.py  test_sampling.py  test_smoke.py  test_storage.py
